# c-int-fmt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: all.h  case.c  case.h  fmt.c  fmt.h  parse.c  parse.h  plus.c  plus.h  pres.c  pres.h  radix.c  radix.h
